# messages-generator-cli

./: Cargo.toml
src/: main.rs
