[package]
name = "messages-generator-cli"
version = "0.1.0"
authors = ["Termonoid <termonoid@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
messages_generator = { git = "https://github.com/Termonoid/messages-generator.git" }

[profile.release]
lto = true
codegen-units = 1
